config.json: updated logo_img in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "base_font": "nunito-sans",
     "palette": "blue",
     "header": {
-        "logo_img": "/images/AnyKloud-Logo-01-15-18.jpg",
+        "logo_img": "/images/AnyKloud-Logo-01-15-18 (1).jpg",
         "logo_img_alt": "Logo",
         "has_nav": true,
         "nav_links": [
