--- a/content/data/config.json
+++ b/content/data/config.json
@@ -15,7 +15,7 @@
             },
             {
                 "label": "About Us",
-                "url": "/features",
+                "url": "/",
                 "style": "link"
             },
             {
