config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -15,7 +15,7 @@
             },
             {
                 "label": "About Us",
-                "url": "/",
+                "url": "/about",
                 "style": "link"
             },
             {
