config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,7 +20,7 @@
             },
             {
                 "label": "Contact Us",
-                "url": "lorem-ipsum",
+                "url": "/",
                 "style": "link",
                 "has_icon": false,
                 "icon": "arrow-left",
