--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,7 +20,7 @@
             },
             {
                 "label": "Contact Us",
-                "url": "/",
+                "url": "/contact",
                 "style": "link",
                 "has_icon": false,
                 "icon": "arrow-left",
